# wacpy

./: README.md  setup.cfg
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
src/wacpy/: __init__.py
src/wacpy/bot/: __init__.py  base_bot.py
src/wacpy/bot/examples/: __init__.py  echo_bot.py
src/wacpy/types/: __init__.py
src/wacpy/types/message/: __init__.py  message.py
src/wacpy/types/message/contact/: __init__.py  contact.py
src/wacpy/types/message/contact/email/: email.py
src/wacpy/types/message/context/: context.py
src/wacpy/types/message/interactive/: __init__.py  interactive.py
src/wacpy/types/message/location/: location.py
src/wacpy/types/message/media/: __init__.py  media.py
src/wacpy/types/message/reaction/: __init__.py  reaction.py
src/wacpy/types/message/template/: __init__.py  template.py
src/wacpy/types/message/text/: text.py
src/wacpy/types/notification/: __init__.py
src/wacpy/types/notification/entry/: __init__.py  entry.py
src/whatsapp_cloud_pyapi/: __init__.py
src/whatsapp_cloud_pyapi/types/: __init__.py
src/whatsapp_cloud_pyapi/types/message/: __init__.py  message.py
src/whatsapp_cloud_pyapi/types/message/contact/: __init__.py  contact.py
src/whatsapp_cloud_pyapi/types/message/interactive/: __init__.py  interactive.py
src/whatsapp_cloud_pyapi/types/message/location/: __init__.py  location.py
src/whatsapp_cloud_pyapi/types/message/media/: media.py
src/whatsapp_cloud_pyapi/types/message/template/: __init__.py  template.py
src/whatsapp_cloud_pyapi/types/notification/: __init__.py  notification.py
(+152 files in other folders)
