[metadata]
name = whatsapp-cloud-pyapi
version = 0.1.3
author = Natanel Shitrit
author_email = natanelsht@gmail.com
description = WhatsApp Cloud API Wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Natanel-Shitrit/whatsapp-cloud-pyapi
project_urls =
    Bug Tracker = https://github.com/Natanel-Shitrit/whatsapp-cloud-pyapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    requests
    dataclasses-json

[options.packages.find]
where = src