[metadata]
name = wacpy
version = 0.2.8
author = Natanel Shitrit
author_email = natanelsht@gmail.com
description = WhatsApp Cloud API Wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Natanel-Shitrit/wacpy
project_urls =
    Bug Tracker = https://github.com/Natanel-Shitrit/wacpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    requests
    dataclasses-json

[options.packages.find]
where = src